--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script  src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
   <!--script src="https://www.gstatic.com/firebasejs/ui/3.5.2/firebase-ui-auth__vi.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/3.5.2/firebase-ui-auth.css" /-->
